Made some updates

--- a/Homework_MNIST_Autoencoder.ipynb
+++ b/Homework_MNIST_Autoencoder.ipynb
@@ -1,28 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.3"
-    },
-    "colab": {
-      "provenance": []
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -111,22 +87,35 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "STvHSt3zICjF"
       },
+      "outputs": [],
       "source": [
         "# # Skip this cell if running locally\n",
         "# from google.colab import drive\n",
         "# drive.mount('/content/gdrive')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "fgkNXdEr6p-X"
       },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/zhwu_cecilia/miniconda3/envs/homework/lib/python3.10/site-packages/torchvision/io/image.py:14: UserWarning: Failed to load image Python extension: 'dlopen(/Users/zhwu_cecilia/miniconda3/envs/homework/lib/python3.10/site-packages/torchvision/image.so, 0x0006): Library not loaded: @rpath/libjpeg.9.dylib\n",
+            "  Referenced from: <0B7EB158-53DC-3403-8A49-22178CAB4612> /Users/zhwu_cecilia/miniconda3/envs/homework/lib/python3.10/site-packages/torchvision/image.so\n",
+            "  Reason: tried: '/Users/zhwu_cecilia/miniconda3/envs/homework/lib/python3.10/site-packages/torchvision/../../../libjpeg.9.dylib' (no such file), '/Users/zhwu_cecilia/miniconda3/envs/homework/lib/python3.10/site-packages/torchvision/../../../libjpeg.9.dylib' (no such file), '/Users/zhwu_cecilia/miniconda3/envs/homework/lib/python3.10/lib-dynload/../../libjpeg.9.dylib' (no such file), '/Users/zhwu_cecilia/miniconda3/envs/homework/bin/../lib/libjpeg.9.dylib' (no such file)'If you don't plan on using image functionality from `torchvision.io`, you can ignore this warning. Otherwise, there might be something wrong with your environment. Did you have `libjpeg` or `libpng` installed before building `torchvision` from source?\n",
+            "  warn(\n"
+          ]
+        }
+      ],
       "source": [
         "# Import all the necessary libraries\n",
         "import numpy as np\n",
@@ -144,9 +133,7 @@
         "import torchvision\n",
         "from torchvision import datasets, transforms\n",
         "from torchvision.utils import save_image"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -164,39 +151,39 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
-        "id": "EKT2zNJR6Rwj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "EKT2zNJR6Rwj",
         "outputId": "0d1b213b-7220-40fe-efa0-cdae30e47a54"
       },
-      "source": [
-        "use_cuda = True\n",
-        "device = torch.device(\"cuda\" if (use_cuda and torch.cuda.is_available()) else \"cpu\")\n",
-        "print(f\"Using device: {device}\")"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Using device: cuda\n"
+            "Using device: cpu\n"
           ]
         }
+      ],
+      "source": [
+        "use_cuda = False\n",
+        "device = torch.device(\"cuda\" if (use_cuda and torch.cuda.is_available()) else \"cpu\")\n",
+        "print(f\"Using device: {device}\")"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "28wNsWmC6Q63"
       },
+      "outputs": [],
       "source": [
-        "torch.manual_seed(42);"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "torch.manual_seed(168);"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -223,13 +210,26 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "8H20Wcmu6p-h",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "8H20Wcmu6p-h",
         "outputId": "7c01dcc3-88d9-451c-8ad5-eb5805f7880b"
       },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 9.91M/9.91M [00:00<00:00, 14.1MB/s]\n",
+            "100%|██████████| 28.9k/28.9k [00:00<00:00, 343kB/s]\n",
+            "100%|██████████| 1.65M/1.65M [00:00<00:00, 3.21MB/s]\n",
+            "100%|██████████| 4.54k/4.54k [00:00<00:00, 13.1MB/s]\n"
+          ]
+        }
+      ],
       "source": [
         "preprocessing = transforms.Compose([\n",
         "    transforms.ToTensor(),\n",
@@ -243,26 +243,11 @@
         "test_dataset = datasets.MNIST(\n",
         "    './bmi212_downloads', train=False, download=True,\n",
         "    transform=preprocessing)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 9.91M/9.91M [00:00<00:00, 14.1MB/s]\n",
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 343kB/s]\n",
-            "100%|██████████| 1.65M/1.65M [00:00<00:00, 3.21MB/s]\n",
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 13.1MB/s]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "train_dataset[0][0].size()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -270,18 +255,20 @@
         "id": "oay1ii680sfO",
         "outputId": "6d2e9904-1c15-4dff-a3cf-a7acde90b62f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "torch.Size([1, 28, 28])"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 15
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "train_dataset[0][0].size()"
       ]
     },
     {
@@ -320,21 +307,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Df46Ok2t6p-n"
       },
+      "outputs": [],
       "source": [
         "BATCH_SIZE = 8  # <-- Please change this as necessary\n",
         "NUM_WORKERS = 1  # <-- Use more workers for more CPU threads"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Tx21NwCGqwE-"
       },
+      "outputs": [],
       "source": [
         "train_loader = torch.utils.data.DataLoader(\n",
         "    train_dataset,\n",
@@ -347,16 +336,11 @@
         "    batch_size=BATCH_SIZE,\n",
         "    shuffle=False,\n",
         "    num_workers=NUM_WORKERS)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "one_batch=next(iter(train_loader))\n",
-        "one_batch[0].size()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -364,18 +348,21 @@
         "id": "hvgrdGuhdwKt",
         "outputId": "80e07c3b-dd8e-4d56-ca6a-07600dfe5465"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "torch.Size([8, 1, 28, 28])"
             ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "one_batch=next(iter(train_loader))\n",
+        "one_batch[0].size()"
       ]
     },
     {
@@ -421,9 +408,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "gGK2j8UM6p-t"
       },
+      "outputs": [],
       "source": [
         "class HNet(nn.Module):\n",
         "    def __init__(self):\n",
@@ -449,15 +438,15 @@
         "    def forward(self, x):\n",
         "        ### Implement the complete forward pass\n",
         "        pass"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "O_Grvigg6p-x"
       },
+      "outputs": [],
       "source": [
         "class MyNet(nn.Module):\n",
         "    def __init__(self):\n",
@@ -483,9 +472,7 @@
         "    def forward(self, x):\n",
         "        ### Implement the complete forward pass\n",
         "        pass"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -518,9 +505,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "o2vn3O8L6p-2"
       },
+      "outputs": [],
       "source": [
         "def train(train_loader, model, optimizer, criterion,\n",
         "          n_epochs=10, **kwargs):\n",
@@ -528,9 +517,7 @@
         "    ### Define your training loop here\n",
         "\n",
         "    pass"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -564,16 +551,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ftxeVJJP6p-7"
       },
+      "outputs": [],
       "source": [
         "### Instantiate your model\n",
         "### Define your loss function (training criterion)\n",
         "### Choose your optimizer"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -590,14 +577,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "J87zUaXX6p_D"
       },
+      "outputs": [],
       "source": [
         "### Set a number of training epochs and train your model."
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -610,14 +597,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "xycLVQK-jwiB"
       },
+      "outputs": [],
       "source": [
         "### Plot loss curve using Matplotlib"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -642,9 +629,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "4pjS79M0oDj_"
       },
+      "outputs": [],
       "source": [
         "# extract 6 figures from training DataLoader\n",
         "mini_batch, _ = next(iter(train_loader))\n",
@@ -661,20 +650,18 @@
         "    examples,\n",
         "    reconstr_examples.view(-1, 1, 28, 28).cpu()])\n",
         "save_image(comparison.cpu(), 'training_reconstruction.png', nrow=n_examples)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "0XG_F4XTqwk9"
       },
+      "outputs": [],
       "source": [
         "Image('training_reconstruction.png', width=300)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -703,9 +690,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "LDO9E6Vl6p_N"
       },
+      "outputs": [],
       "source": [
         "### Helper Functions for Plotting Multiple Images\n",
         "\n",
@@ -738,21 +727,19 @@
         "# Make a grid from batch\n",
         "out = torchvision.utils.make_grid(batch)\n",
         "imshow(out)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "E2edUEVG3Rev"
       },
+      "outputs": [],
       "source": [
         "### Iterate over checkpoints and plot reconstruction\n",
         "### figures from the test set."
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -769,9 +756,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "PNg0PfrK4gzn"
       },
+      "outputs": [],
       "source": [
         "### Write a helper function to grab examples from the test_loader to generate\n",
         "### pairs of embeddings and their associated labels\n",
@@ -783,9 +772,7 @@
         "  return latent_embeddings, labels\n",
         "\n",
         "### Plot 2D latent space representation color-coded according to their true labels"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -813,20 +800,22 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "1K6o1Wr88EXj"
       },
+      "outputs": [],
       "source": [
         "### Download faces.zip and unzip it into bmi219_downloads/"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "nM7WXmAu6p_T"
       },
+      "outputs": [],
       "source": [
         "# preprocessing = transforms.Compose([\n",
         "#     transforms.Grayscale(),\n",
@@ -841,9 +830,7 @@
         "# test_dataset = datasets.ImageFolder(\n",
         "#     'bmi212_downloads/Faces/test',\n",
         "#     transform=preprocessing)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -866,5 +853,30 @@
         "4. Try sampling the 2-d latent space close to existing examples (by adding some noise...) or randomly. What do the generated images look like?"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "homework",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.19"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
