--- a/Homework_MNIST_Autoencoder.ipynb
+++ b/Homework_MNIST_Autoencoder.ipynb
@@ -192,9 +192,7 @@
       },
       "source": [
         "> **Question 0.1) Why is it important to set the seed for the random number generator?**\n",
-        "\n",
-        "*Double-click to add your answer...*\n",
-        "\n"
+        "    np.random.seed(random_seed) takes the parameter value as the seed, then create a fixed set of \"random\" numbers every time based on the same random_seed. However, where the parameters is left blank, np.random.seed() set the seed to a random number, resulting in different set of random numbers. It is important to set the seed for the random number generator when the user would like the \"random numbers\" to be predictable, making it easier for debugging the code with them fixed.   "
       ]
     },
     {
@@ -210,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -220,13 +218,100 @@
       },
       "outputs": [
         {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 404: Not Found\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz to ./bmi212_downloads/MNIST/raw/train-images-idx3-ubyte.gz\n"
+          ]
+        },
+        {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 9.91M/9.91M [00:00<00:00, 14.1MB/s]\n",
-            "100%|██████████| 28.9k/28.9k [00:00<00:00, 343kB/s]\n",
-            "100%|██████████| 1.65M/1.65M [00:00<00:00, 3.21MB/s]\n",
-            "100%|██████████| 4.54k/4.54k [00:00<00:00, 13.1MB/s]\n"
+            "100.0%\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Extracting ./bmi212_downloads/MNIST/raw/train-images-idx3-ubyte.gz to ./bmi212_downloads/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 404: Not Found\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz to ./bmi212_downloads/MNIST/raw/train-labels-idx1-ubyte.gz\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100.0%\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Extracting ./bmi212_downloads/MNIST/raw/train-labels-idx1-ubyte.gz to ./bmi212_downloads/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 404: Not Found\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz to ./bmi212_downloads/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100.0%\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Extracting ./bmi212_downloads/MNIST/raw/t10k-images-idx3-ubyte.gz to ./bmi212_downloads/MNIST/raw\n",
+            "\n",
+            "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+            "Failed to download (trying next):\n",
+            "HTTP Error 404: Not Found\n",
+            "\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
+            "Downloading https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz to ./bmi212_downloads/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100.0%"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Extracting ./bmi212_downloads/MNIST/raw/t10k-labels-idx1-ubyte.gz to ./bmi212_downloads/MNIST/raw\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
           ]
         }
       ],
@@ -247,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -257,18 +342,36 @@
       },
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "torch.Size([1, 28, 28])"
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "torch.Size([1, 28, 28])\n",
+            "torch.Size([1, 28, 28])\n"
+          ]
         }
       ],
       "source": [
-        "train_dataset[0][0].size()"
+        "print(train_dataset[0][0].size())\n",
+        "print(test_dataset[0][0].size())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "10000\n",
+            "60000\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(len(test_dataset))\n",
+        "print(len(train_dataset))"
       ]
     },
     {
@@ -278,7 +381,7 @@
       },
       "source": [
         "> **Q1.1) How many examples do the training set and test set have?**\n",
-        "\n",
+        "    training: 60,000. test: 10,000.\n",
         "...\n",
         "\n",
         "> **Q1.2) What's the format of each input example? Can we directly put these into a fully-connected layer?**\n",
